Add support for host ip