@@ -7,14 +7,21 @@ ENV UPSVER=1.1.3.Final
 ENV UPSDIST=/opt/aerogear-unifiedpush-server-$UPSVER
 ENV DOMAIN=aerogear.dev
 
-# ENV variable
+# Set MAVEN_OPTS to increase the amount of memory available for Maven
 
-RUN export DOMAIN=$DOMAIN
+ENV MAVEN_OPTS -Xmx768m -XX:+UseConcMarkSweepGC -XX:MaxPermSize=128m -XX:+CMSClassUnloadingEnabled
+
+# ENV variable
+CMD export DOMAIN=$DOMAIN
+CMD export HOSTIP=$(ip route show | grep eth0 | awk '{print $9}')
 
 USER root
 
 # Clean the metadata
-RUN yum install -y unzip wget && yum -q clean all
+# install openssl needed for certificate
+RUN yum update \
+	&& yum install -y unzip wget openssl \
+	&& yum -q clean all
 
 ## MYSQL
 ENV mysql_module_dir=$JBOSS_HOME/modules/com/mysql/jdbc/main/
@@ -22,7 +29,6 @@ RUN mkdir -p ${mysql_module_dir}
 RUN wget -O mysql-connector-java-5.1.18.jar http://search.maven.org/remotecontent\?filepath\=mysql/mysql-connector-java/5.1.18/mysql-connector-java-5.1.18.jar
 RUN mv mysql-connector-java-5.1.18.jar ${mysql_module_dir}
 COPY configuration/xml/mysql-module.xml ${mysql_module_dir}/module.xml
-
 
 # Rename the original configuration file
 RUN mv $JBOSS_HOME/standalone/configuration/standalone.xml $JBOSS_HOME/standalone/configuration/standalone.xml.orig
@@ -33,7 +39,6 @@ ADD configuration/xml/standalone-full-sample.xml $JBOSS_HOME/standalone/configur
 # Add the certificate.sh script into $JBOSS_HOME/standalone/configuration/certs
 ADD configuration/certs/ $JBOSS_HOME/standalone/configuration/certs
 
-
 # update rights for everything to be jboss user owned
 RUN chown -R jboss:jboss $JBOSS_HOME/standalone
 
@@ -41,14 +46,10 @@ RUN chown -R jboss:jboss $JBOSS_HOME/standalone
 WORKDIR /opt/jboss/wildfly/standalone/configuration/certs
 
 # Execute the script to generate self signed certificates
-# RUN ./certificate.sh
+RUN ./certificate.sh
 
 # Switch to the working dir /opt/jboss/wildfly
 WORKDIR /opt/jboss/wildfly
-
-# Expose SSL default port
-EXPOSE 8443
-
 
 RUN curl -L -o /opt/aerogear-unifiedpush-server-$UPSVER-dist.tar.gz https://github.com/aerogear/aerogear-unifiedpush-server/releases/download/$UPSVER/aerogear-unifiedpush-server-$UPSVER-dist.tar.gz
 WORKDIR /opt
@@ -58,9 +59,6 @@ RUN tar zxf aerogear-unifiedpush-server-$UPSVER-dist.tar.gz
 WORKDIR $UPSDIST/migrator
 RUN unzip ups-migrator-dist.zip
 COPY configuration/liquibase.properties  $UPSDIST/migrator/ups-migrator/
-
-# install openssl needed for certificate
-RUN yum install -y openssl && yum -q clean all
 
 # Run everything below as aerogear user
 USER jboss
@@ -72,6 +70,8 @@ WORKDIR /opt/jboss/wildfly/standalone/deployments
 RUN   cp $UPSDIST/servers/unifiedpush-auth-server.war $JBOSS_HOME/standalone/deployments \
       && cp $UPSDIST/servers/unifiedpush-server-wildfly.war $JBOSS_HOME/standalone/deployments
 
+# Expose SSL default port
+EXPOSE 8443
 
 # copy and run startup script
 # migration is done inside the startup script before launching the server
